WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314956
IntersectionObserverEntry.boundingClientRect ignores GetBoundingClientRectZoomedEnabled
https://bugs.webkit.org/show_bug.cgi?id=314956
Summary
IntersectionObserverEntry.boundingClientRect ignores GetBoundingClientRectZoo...
Ahmad Saleem
Reported
2026-05-16 12:01:17 PDT
ssia - progresses WPT
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-05-16 12:01:23 PDT
<
rdar://problem/177250323
>
Ahmad Saleem
Comment 2
2026-05-16 12:03:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65045
EWS
Comment 3
2026-05-19 12:56:25 PDT
Committed
313512@main
(f49916ba6129): <
https://commits.webkit.org/313512@main
> Reviewed commits have been landed. Closing PR #65045 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug