IntersectionObserverEntry.boundingClientRect ignores GetBoundingClientRectZoomedEnabled https://bugs.webkit.org/show_bug.cgi?id=314956 rdar://177250323

Reviewed by Simon Fraser.

Element::getBoundingClientRect() routes through Document::zoomForClient(),
which honors the GetBoundingClientRectZoomedEnabled setting and skips the
absolute-to-client zoom division when enabled.

IntersectionObserver::updateObservations bypassed that helper and passed
style().usedZoom() directly to absoluteToClientRect, so its reported
rects were always divided by usedZoom and disagreed with
getBoundingClientRect() under the default pref. Route through
Document::zoomForClient() so the entry rects match.

* LayoutTests/imported/w3c/web-platform-tests/intersection-observer/bounding-box-expected.txt: Progression
* LayoutTests/imported/w3c/web-platform-tests/intersection-observer/zoom-scaled-target-expected.txt: Ditto
* Source/WebCore/page/IntersectionObserver.cpp:
(WebCore::IntersectionObserver::updateObservations):

Canonical link: https://commits.webkit.org/313512@main